--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
+DATABASE_ROOT_PASSWORD=test
 DATABASE_USER=test
 DATABASE_PASSWORD=test
+DATABASE_HOST=localhost
+DATABASE_PORT=3306
+DATABASE_NAME=test
